temp finish of protocol

--- a/protocol/sections/solution.tex
+++ b/protocol/sections/solution.tex
@@ -74,4 +74,4 @@ Als erstes habe ich mit dem Java-Tool keytool ein Zertifikat erstellt und dieses
 \newline
 Dann habe ich die Konfiguration des Tomcat Server gesucht und habe dort den SSL Connector eingeschaltet und angepasst.
 \newline
-Als ich dann versucht habe, den Server zu starten und dann startet der Server nicht mehr mit dem Felher Access Denied.
+Als ich dann versucht habe, den Server zu starten und dann startet der Server nicht mehr mit dem Fehler Access Denied. Dieses Problem habe ich bis jetzt noch immer nicht gelöst.
