fixed a small error

--- a/protocol/sections/solution.tex
+++ b/protocol/sections/solution.tex
@@ -14,9 +14,9 @@ Folgende Punkte wurden bearbeitet:
 
 \subsection{Überblick erhalten}
 
-Zu beginnt der Übung habe ich noch immer nicht ganz verstanden, wie der CAS Server ausgeführt wird, ob das eine eigenständige Anwendung ist, ob das nur einen Erweiterung für eine Projekt ist, ob ich CAS an einen Dienst anhängen muss.
+Zu Beginn der Übung habe ich noch immer nicht ganz verstanden, wie der CAS Server ausgeführt wird, ob das eine eigenständige Anwendung ist, ob das nur einen Erweiterung für eine Projekt ist, ob ich CAS an einen Dienst anhängen muss.
 \newline
-Zusätzlich habe ich dann ewig im Internet nach einem Quick-Start und einem erweitertem Tutorial gesucht. Ein Tutorial habe ich zwar gefunden, habe allerdings erst etwas spät bemerkt, dass dieses Tutorial seit über einem Jahr veraltet ist und nicht mehr verwendet werden sollte und hat mich auf die offizielle Webseite weitergeleitet. Etwas ähnliches wie einen Quick-Start habe ich nicht gefunden, daher hatte/habe ich noch immer einen klare Vorstellung, wie die Struktur auf dem Server und auf dem Client aussehen soll und über Technologie ich einsetzen soll, außer Tomcat und CAS.
+Zusätzlich habe ich dann ewig im Internet nach einem Quick-Start und einem erweitertem Tutorial gesucht. Ein Tutorial habe ich zwar gefunden, habe allerdings erst etwas spät bemerkt, dass dieses Tutorial seit über einem Jahr veraltet ist und nicht mehr verwendet werden sollte und hat mich auf die offizielle Webseite von CAS weitergeleitet. Etwas ähnliches wie einen Quick-Start habe ich nicht gefunden, daher hatte/habe ich noch immer einen klare Vorstellung, wie die Struktur auf dem Server und auf dem Client aussehen soll und über Technologie ich einsetzen soll, außer Tomcat und CAS.
 \newline 
 Zuletzt habe ich dann begriffen, dass der Server zumindest über eine war-Datei auf einem Tomcat Server deployed werden kann und damit den ersten Schritt legt.
 
